Fix sidebarClasses being able to drag horizontally on mobile.

--- a/client/app/sidebar.styl
+++ b/client/app/sidebar.styl
@@ -114,6 +114,7 @@ div.sidebarProfile
 .sidebarClasses
 	overflow-y: auto
 	overflow-x: hidden
+	width: 200px
 	height: calc(100% - 240px)
 	position: relative
 
